# morpheus-sleep-health-ml

./: .gitignore  MORPHEUS.md  README.md  pyproject.toml
artifacts/03_feature_engineering/: X_test_base.pkl  X_test_fe.pkl  X_train_base.pkl  X_train_fe.pkl  catboost_recipe_cv_results.csv  finalist_route_metadata.json  hgb_recipe_cv_results.csv  recipe_selection_summary.csv  y_test.pkl  y_train.pkl
configs/: config.yaml
notebooks/: 00_dataset_assembly.ipynb  01_eda.ipynb  02_modeling.ipynb  03_feature_engineering.ipynb  04_model_refinement.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
scripts/: README.txt  run_preprocessing.py
src/: README.txt
src/data/: io.py  split.py
src/preprocessing/: cleaning.py  pipeline_builder.py  typing.py
src/utils/: config.py  paths.py
